@@ -1,0 +1,22 @@
+#ifndef STORAGE_FACTORY_RFIO_SHIFT_STORAGE_MAKER_H
+# define STORAGE_FACTORY_RFIO_SHIFT_STORAGE_MAKER_H
+
+//<<<<<< INCLUDES                                                       >>>>>>
+
+# include "Utilities/StorageFactory/plugins/RFIOStorageMaker.h"
+
+//<<<<<< PUBLIC DEFINES                                                 >>>>>>
+//<<<<<< PUBLIC CONSTANTS                                               >>>>>>
+//<<<<<< PUBLIC TYPES                                                   >>>>>>
+//<<<<<< PUBLIC VARIABLES                                               >>>>>>
+//<<<<<< PUBLIC FUNCTIONS                                               >>>>>>
+//<<<<<< CLASS DECLARATIONS                                             >>>>>>
+
+class RFIOShiftStorageMaker : public RFIOStorageMaker
+{
+};
+
+//<<<<<< INLINE PUBLIC FUNCTIONS                                        >>>>>>
+//<<<<<< INLINE MEMBER FUNCTIONS                                        >>>>>>
+
+#endif // STORAGE_FACTORY_RFIO_SHIFT_STORAGE_MAKER_H
